até capitulo IV feito ish

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
         "commands": [
             {
                 "cmd": "tectonic ${file}",
-                "match": "\\.tex$"
+                "match": "\\.tex$",
+                "notMatch": "\\*temp.tex$"
             }
         ],
         "autoClearConsole": true,
